tests/purs/failing/EmptyDo.purs
-- @shouldFailWith ErrorParsingModule

module Main where

main = do

